<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/editTextEmail"/>

    <EditText
        android:id="@+id/editTextOctopus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/editTextOctopus"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="175dp"
        android:layout_marginStart="131dp"
        android:background="#018786"
        android:text="@string/buttonRegister" />
</RelativeLayout>